--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "author": "Ulisses Cruz <ulissescruz@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon -e js,html,css"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
